Replaced mapping with new db

--- a/db-crociere/db-crociere/App.config
+++ b/db-crociere/db-crociere/App.config
@@ -6,6 +6,9 @@
         <add name="db_crociere.Properties.Settings.DbcrociereConnectionString"
             connectionString="Data Source=DESKTOP-8FAP7QK;Initial Catalog=Dbcrociere;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="db_crociere.Properties.Settings.dbCrociereConnectionString1"
+            connectionString="Data Source=DESKTOP-8FAP7QK;Initial Catalog=dbCrociere;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
