--- a/db-crociere/db-crociere/db-crociere.csproj
+++ b/db-crociere/db-crociere/db-crociere.csproj
@@ -53,16 +53,16 @@
     <Compile Include="App.Designer.cs">
       <DependentUpon>App.cs</DependentUpon>
     </Compile>
-    <Compile Include="DataClassesCrociere.designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>DataClassesCrociere.dbml</DependentUpon>
-    </Compile>
     <Compile Include="AddShipPopup.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="AddShipPopup.Designer.cs">
       <DependentUpon>AddShipPopup.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DataClassesDBCrociere.designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DataClassesDBCrociere.dbml</DependentUpon>
     </Compile>
     <Compile Include="SplashScreen.cs">
       <SubType>Form</SubType>
@@ -91,13 +91,13 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <None Include="DataClassesCrociere.dbml">
+    <None Include="DataClassesDBCrociere.dbml">
       <Generator>MSLinqToSQLGenerator</Generator>
-      <LastGenOutput>DataClassesCrociere.designer.cs</LastGenOutput>
+      <LastGenOutput>DataClassesDBCrociere.designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </None>
-    <None Include="DataClassesCrociere.dbml.layout">
-      <DependentUpon>DataClassesCrociere.dbml</DependentUpon>
+    <None Include="DataClassesDBCrociere.dbml.layout">
+      <DependentUpon>DataClassesDBCrociere.dbml</DependentUpon>
     </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
