--- a/db-crociere/db-crociere/App.config
+++ b/db-crociere/db-crociere/App.config
@@ -9,6 +9,9 @@
         <add name="db_crociere.Properties.Settings.dbCrociereConnectionString1"
             connectionString="Data Source=DESKTOP-8FAP7QK;Initial Catalog=dbCrociere;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="db_crociere.Properties.Settings.dbCrociereConnectionString2"
+            connectionString="Data Source=DESKTOP-0LSU02U;Initial Catalog=dbCrociere;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
