some fix prenot

--- a/db-crociere/db-crociere/db-crociere.csproj
+++ b/db-crociere/db-crociere/db-crociere.csproj
@@ -47,6 +47,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddPrenPopup.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddPrenPopup.Designer.cs">
+      <DependentUpon>AddPrenPopup.cs</DependentUpon>
+    </Compile>
     <Compile Include="App.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -64,6 +70,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DataClassesDBCrociere.dbml</DependentUpon>
     </Compile>
+    <Compile Include="DateRange.cs" />
     <Compile Include="SplashScreen.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -72,6 +79,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="AddPrenPopup.resx">
+      <DependentUpon>AddPrenPopup.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="AddShipPopup.resx">
       <DependentUpon>AddShipPopup.cs</DependentUpon>
     </EmbeddedResource>
