--- a/db-crociere/db-crociere/db-crociere.csproj
+++ b/db-crociere/db-crociere/db-crociere.csproj
@@ -36,6 +36,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Linq" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -47,9 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AddPrenPopup.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="AddPrenPopup.cs" />
     <Compile Include="AddPrenPopup.Designer.cs">
       <DependentUpon>AddPrenPopup.cs</DependentUpon>
     </Compile>
@@ -65,12 +64,19 @@
     <Compile Include="AddShipPopup.Designer.cs">
       <DependentUpon>AddShipPopup.cs</DependentUpon>
     </Compile>
+    <Compile Include="Utilities.cs" />
     <Compile Include="DataClassesDBCrociere.designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>DataClassesDBCrociere.dbml</DependentUpon>
     </Compile>
     <Compile Include="DateRange.cs" />
+    <Compile Include="AddExpensesPopup.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddExpensesPopup.Designer.cs">
+      <DependentUpon>AddExpensesPopup.cs</DependentUpon>
+    </Compile>
     <Compile Include="SplashScreen.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -79,6 +85,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="AddExpensesPopup.resx">
+      <DependentUpon>AddExpensesPopup.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="AddPrenPopup.resx">
       <DependentUpon>AddPrenPopup.cs</DependentUpon>
     </EmbeddedResource>
