--- a/db-crociere/db-crociere/db-crociere.csproj
+++ b/db-crociere/db-crociere/db-crociere.csproj
@@ -54,7 +54,9 @@
     <Compile Include="Activities\AddActivitiesPopup.Designer.cs">
       <DependentUpon>AddActivitiesPopup.cs</DependentUpon>
     </Compile>
-    <Compile Include="AddPrenPopup.cs" />
+    <Compile Include="AddPrenPopup.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="AddPrenPopup.Designer.cs">
       <DependentUpon>AddPrenPopup.cs</DependentUpon>
     </Compile>
@@ -64,11 +66,15 @@
     <Compile Include="App.Designer.cs">
       <DependentUpon>App.cs</DependentUpon>
     </Compile>
-    <Compile Include="AddShipPopup.cs" />
+    <Compile Include="AddShipPopup.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="AddShipPopup.Designer.cs">
       <DependentUpon>AddShipPopup.cs</DependentUpon>
     </Compile>
-    <Compile Include="AddNavigationPopup.cs" />
+    <Compile Include="AddNavigationPopup.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="AddNavigationPopup.Designer.cs">
       <DependentUpon>AddNavigationPopup.cs</DependentUpon>
     </Compile>
@@ -77,17 +83,23 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DataClassesDBCrociere.dbml</DependentUpon>
     </Compile>
-    <Compile Include="Staff\AddStaffPopup.cs" />
+    <Compile Include="Staff\AddStaffPopup.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Staff\AddStaffPopup.Designer.cs">
       <DependentUpon>AddStaffPopup.cs</DependentUpon>
     </Compile>
     <Compile Include="Utilities.cs" />
     <Compile Include="DateRange.cs" />
-    <Compile Include="AddExpensesPopup.cs" />
+    <Compile Include="AddExpensesPopup.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="AddExpensesPopup.Designer.cs">
       <DependentUpon>AddExpensesPopup.cs</DependentUpon>
     </Compile>
-    <Compile Include="SplashScreen.cs" />
+    <Compile Include="SplashScreen.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="SplashScreen.Designer.cs">
       <DependentUpon>SplashScreen.cs</DependentUpon>
     </Compile>
